# personal-finance

./: .dockerignore  .gitignore  Dockerfile  Makefile  PRODUCT.md  README.md  docker-compose.yml
.github/workflows/: archive-completed-openspec-changes.yml  build-and-publish.yaml  openspec-badge.yml
.opencode/agent/: openspec-feedback.md  openspec-implementer.md  openspec-planner.md
.opencode/plugin/: agent-loop-metrics.ts
.opencode/sandbox-kits/agent-loop/: README.md  (+1 more)
.opencode/scripts/: openspec-agent-loop-tick.sh  openspec-agent-loop-watch.sh  openspec-agent-ready-worker.sh  openspec-apply-pr-worker.sh  openspec-dispatch-issue.sh  openspec-plan-issue-worker.sh  openspec-post-agent-loop-metrics.sh  openspec-pr-feedback-worker.sh  openspec-watch-agent-ready-planning.sh  openspec-watch-agent-ready.sh  openspec-watch-apply-ready.sh  openspec-watch-pr-feedback.sh  opsx-dispatch-issue.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/tests/: conftest.py  test_accounts.py  test_csv_preview.py  test_database.py  test_demo_mode.py  test_finance_dashboard.py  test_health.py  test_import_templates.py  test_transaction_import.py  test_transaction_labeling.py  test_transaction_transforms.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/scripts/: pr-screenshots.mjs
frontend/src/: App.css  App.test.tsx  App.tsx
samples/: signed-amount.csv  split-debit-credit.csv  value-lookup-direction.csv
scripts/: archive-completed-openspec-changes.js
unraid/: personal-finance.xml
(+93 files in other folders)
