[project]
name = "personal-finance-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "email-validator==2.3.0",
    "fastapi==0.115.6",
    "polars==1.18.0",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "sqlmodel==0.0.22",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.uv]
package = false
